# watchclaw

./: .gitignore  AGENTLESS-DEEP-SCAN.md  ARHITECTURA.md  LIVE-PROGRESS.md  NIRSOFT-CAPABILITIES.md  RMM-FEATURE-CHECKLIST.md  STACK-REFERINTE.md  STRATEGIE-FONDARE.md  TOPOLOGY-ROADMAP.md  package-lock.json
.claude/: launch.json
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: banner.rs  collector.rs  discovery.rs  fingerprint.rs  inventory.rs  jobs.rs  main.rs  mdns.rs  model.rs  oui.rs  ssdp.rs  transport.rs
control-plane/: go.mod  go.sum  main.go
control-plane/internal/agentless/: script.go  script_test.go  winrm.go  winrm_test.go
control-plane/internal/api/: CODEX-BRIEF.md  api.go  dashboard.html  landing.html
control-plane/internal/model/: model.go
control-plane/internal/store/: jobs_test.go  store.go
control-plane/internal/topology/: topology.go
design-ref/: antigravity-real.css  antigravity-real.html
infra/: Dockerfile  Dockerfile.agent  auto-deploy.sh  deploy-zmfbot.sh  docker-compose.yml  mirror-prod.ps1  setup-autodeploy.sh
infra/ci/: seed.sh  shots.mjs
